// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRepos Saga should match the snapshot 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "type": "boilerplate/Repos/REPOS_REQUEST",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`getRepos Saga should match the snapshot 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "name",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
